# DB0

./: Cargo.toml  README.md
.github/workflows/: ci.yml
binaries/db0/: Cargo.toml
binaries/db0/src/cmd/: init.rs
binaries/db0/src/cmd/tests/: init.rs
crates/access/: Cargo.toml
crates/access/src/: btree.rs  codec.rs  lib.rs  slotted_page.rs
crates/access/src/btree/: branch.rs  cursor.rs  error.rs  leaf.rs  meta.rs  mod.rs  node.rs  tests.rs
crates/ast/: Cargo.toml
crates/ast/src/: common.rs  expr.rs  lib.rs  token.rs
crates/ast/src/stmt/: ddl.rs  dml.rs  mod.rs
crates/binder/: Cargo.toml
crates/binder/src/: lib.rs
crates/bound-ast/: Cargo.toml
crates/bound-ast/src/: expr.rs  lib.rs
crates/bound-ast/src/expr/: arithmetic.rs  column.rs  comparison.rs  literal.rs  logic.rs
crates/bound-ast/src/stmt/: common.rs  ddl.rs  insert.rs  mod.rs  select.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  macros.rs
crates/common/src/dsa/: bitmap.rs
crates/db0/: Cargo.toml
crates/db0/src/: cmd.rs  main.rs
crates/db0/src/cmd/: error.rs  init.rs  mod.rs
crates/db0/tests/integration/: main.rs
crates/def/: Cargo.toml
crates/def/src/: catalog.rs  data.rs  join.rs  lib.rs  meta.rs  storage.rs  types.rs  value.rs
crates/def/src/attribute/: mod.rs  types.rs  value.rs
crates/def/src/catalog/: catalog.rs  database_catalog.rs  error.rs  meta.rs  mod.rs  table.rs  table_schema.rs
crates/def/src/meta/: column.rs  database.rs  error.rs  mod.rs  schema.rs  table.rs  tablespace.rs
crates/def/src/storage/: error.rs  mod.rs
crates/def/src/tablespace/: mod.rs
crates/def/src/transaction/: error.rs  mod.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/executor/src/stmt/: create_table.rs  insert.rs  mod.rs  query.rs
crates/parser/: Cargo.toml
crates/parser/src/: lexer.rs  lib.rs  multi_peekable.rs  parser.rs
crates/parser/src/ast/: common.rs  ddl.rs  dml.rs  expr.rs  mod.rs
crates/parser/src/common/: mod.rs  multi_peekable.rs
crates/parser/src/lexer/: error.rs  mod.rs
crates/parser/src/parser/: common.rs  ddl.rs  error.rs  expr.rs  insert.rs  mod.rs  query.rs
crates/plan/: Cargo.toml
crates/plan/src/: delete.rs  filter.rs  index_scan.rs  insert.rs  lib.rs  limit.rs  seq_scan.rs  sort.rs
crates/planner/: Cargo.toml
crates/planner/src/: error.rs  lib.rs
crates/planner/src/logical_plan/: create_table.rs  insert.rs  mod.rs  node.rs  plan.rs  query.rs
crates/planner/src/logical_plan/generator/: error.rs  insert.rs  mod.rs  query.rs  table.rs
crates/planner/src/physical_plan/: join.rs  mod.rs  node.rs  plan.rs  scan.rs
crates/semantic-analyzer/: Cargo.toml
crates/semantic-analyzer/src/: lib.rs  stmt.rs
crates/semantic-analyzer/src/stmt/: create_table.rs  insert.rs  mod.rs  select.rs
crates/sql/src/: error.rs  lib.rs
crates/sql/src/catalog/: catalog.rs  database_catalog.rs  mod.rs  table_schema.rs
crates/sql/src/common/: macros.rs  mod.rs  test_utils.rs  types.rs
crates/sql/src/common/iter/: mod.rs  multi_peekable.rs
crates/sql/src/lexer/: error.rs  mod.rs  token.rs
crates/sql/src/logical_plan/: create_table.rs  insert.rs  mod.rs  planner.rs  query.rs
crates/sql/src/parser/: common.rs  ddl.rs  error.rs  expr.rs  insert.rs  lexer.rs  mod.rs  query.rs  token.rs
crates/sql/src/parser/ast/: common.rs  dml.rs  mod.rs
crates/sql/src/planner/: error.rs  mod.rs
crates/sql/src/planner/logical_plan/: create_table.rs  insert.rs  mod.rs  plan.rs  query.rs
crates/sql/src/planner/physical_plan/: join.rs  mod.rs  plan.rs  scan.rs
crates/sql/src/stmt/: common.rs  dml.rs  expr.rs  mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: buffer.rs  codec.rs  disk.rs  file.rs  lib.rs  manager.rs  slotted_page.rs
crates/storage/src/btree/: branch.rs  error.rs  leaf.rs  meta.rs  mod.rs  node.rs
crates/storage/src/btree/page/: branch.rs  error.rs  leaf.rs  meta.rs  mod.rs  slotted_page.rs
crates/storage/src/buffer/: error.rs  lru_replacer.rs  manager.rs  mod.rs  page.rs  pool.rs  replacer.rs
