[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
snafu = { version = "0.7", features = ["backtraces-impl-std"] }

access = { path = "./crates/access" }
ast = { path = "./crates/ast" }
bound-ast = { path = "./crates/bound-ast" }
common = { path = "./crates/common" }
def = { path = "./crates/def" }
parser = { path = "./crates/parser" }
planner = { path = "./crates/planner" }
semantic-analyzer = { path = "./crates/semantic-analyzer" }
storage = { path = "./crates/storage" }

# dev-dependencies
tempfile = "3"
