[package]
name = "access"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12"
byteorder = "1.4"
snafu = { version = "0.7", features = ["backtraces-impl-std"] }

common.workspace = true
def.workspace = true
storage.workspace = true

[dev-dependencies]
rand = "0.8"
tempfile = "3"
