[package]
name = "db0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
def = { path = "../def" }
storage = { path = "../storage" }

clap = "4.0"
snafu = { version = "0.7", features = ["backtraces-impl-std"]}
