[package]
name = "db0"
version = "0.1.0"

edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0"
snafu.workspace = true

access.workspace = true
def.workspace = true
storage.workspace = true

[dev-dependencies]
tempfile.workspace = true
