[package]
name = "semantic-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu.workspace = true

ast.workspace = true
binder.workspace = true
bound-ast.workspace = true
common.workspace = true
def.workspace = true
