[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
def = { path = "../def" }

bytemuck = "1.12"
byteorder = "1.4"
lru = "0.9"
snafu = { version = "0.7", features = ["backtraces-impl-std"]}

[dev-dependencies]
rand = "0.8"
tempfile = "3"
