[package]
name = "storage"
version = "0.0.0"

edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12"
byteorder = "1.4"
lru = "0.9"
snafu = { version = "0.7", features = ["backtraces-impl-std"]}

common.workspace = true
def.workspace = true

[dev-dependencies]
rand = "0.8"
tempfile = "3"
