[package]
name = "storage"
version = "0.0.0"

edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru = "0.9"
snafu.workspace = true

common.workspace = true
def.workspace = true

[dev-dependencies]
tempfile.workspace = true
